--- a/src/com/grupo11/dulcehogar/s3/vistas/cuotaPorCancelar.form
+++ b/src/com/grupo11/dulcehogar/s3/vistas/cuotaPorCancelar.form
@@ -72,6 +72,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Buscar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_buscarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
