--- a/src/com/grupo11/dulcehogar/s3/vistas/verDatosSocio.form
+++ b/src/com/grupo11/dulcehogar/s3/vistas/verDatosSocio.form
@@ -168,6 +168,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Presiona Enter"/>
       </Properties>
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jLabel9KeyPressed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
