--- a/src/com/grupo11/dulcehogar/s3/vistas/registrarSocio.form
+++ b/src/com/grupo11/dulcehogar/s3/vistas/registrarSocio.form
@@ -36,32 +36,41 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel8" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel9" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel10" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel9" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel10" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="txt_nombre" alignment="0" max="32767" attributes="0"/>
-                  <Component id="txt_apellidoPaterno" alignment="0" max="32767" attributes="0"/>
-                  <Component id="txt_apellidoMaterno" alignment="0" max="32767" attributes="0"/>
-                  <Component id="txt_RUT" alignment="0" max="32767" attributes="0"/>
-                  <Component id="txt_correo" alignment="0" max="32767" attributes="0"/>
-                  <Component id="txt_telefono" alignment="0" max="32767" attributes="0"/>
-                  <Component id="txt_domicilio" alignment="0" max="32767" attributes="0"/>
-                  <Component id="txt_comuna" alignment="0" max="32767" attributes="0"/>
-                  <Component id="txt_numeroSocio" alignment="0" pref="250" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="btn_registrar" min="-2" max="-2" attributes="0"/>
-                  <Component id="fieldPassReg" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="txt_nombre" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txt_apellidoPaterno" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txt_apellidoMaterno" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txt_RUT" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txt_correo" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txt_telefono" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txt_domicilio" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txt_comuna" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txt_numeroSocio" alignment="0" pref="250" max="32767" attributes="0"/>
+                      <Component id="fieldPassReg" max="32767" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="64" max="32767" attributes="0"/>
+              <EmptySpace pref="58" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -142,9 +151,9 @@
                   <Component id="jLabel10" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="fieldPassReg" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
-              <Component id="btn_registrar" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
+              <Component id="btn_registrar" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
