--- a/src/com/grupo11/dulcehogar/s3/vistas/registrarSocio.form
+++ b/src/com/grupo11/dulcehogar/s3/vistas/registrarSocio.form
@@ -35,8 +35,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -46,28 +46,28 @@
                           <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel9" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel10" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel8" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="txt_nombre" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txt_apellidoPaterno" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txt_apellidoMaterno" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txt_RUT" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txt_correo" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txt_telefono" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txt_domicilio" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txt_comuna" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txt_numeroSocio" alignment="0" pref="250" max="32767" attributes="0"/>
+                      </Group>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                  </Group>
-              </Group>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="btn_registrar" min="-2" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="txt_nombre" alignment="0" max="32767" attributes="0"/>
-                      <Component id="txt_apellidoPaterno" alignment="0" max="32767" attributes="0"/>
-                      <Component id="txt_apellidoMaterno" alignment="0" max="32767" attributes="0"/>
-                      <Component id="txt_RUT" alignment="0" max="32767" attributes="0"/>
-                      <Component id="txt_correo" alignment="0" max="32767" attributes="0"/>
-                      <Component id="txt_telefono" alignment="0" max="32767" attributes="0"/>
-                      <Component id="txt_domicilio" alignment="0" max="32767" attributes="0"/>
-                      <Component id="txt_comuna" alignment="0" max="32767" attributes="0"/>
-                      <Component id="txt_numeroSocio" alignment="0" pref="250" max="32767" attributes="0"/>
-                      <Component id="fieldPassReg" max="32767" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="104" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="btn_registrar" min="-2" max="-2" attributes="0"/>
+                          <Component id="fieldPassReg" min="-2" pref="250" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
               </Group>
               <EmptySpace pref="58" max="32767" attributes="0"/>
@@ -77,7 +77,7 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace pref="25" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
@@ -153,7 +153,7 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btn_registrar" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
